added function to get info from the form

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
                 <th>Author</th>
                 <th>Pages</th>
                 <th>Read</th>
+                <th>Delete</th>
             </tr>
 
         </table>
-        <form class = "form">
+        <form class = "form" id = "form">
             <label>Title</label>
             <input type = "text" id ="title" name ="Title" placeholder = "Enter Title" class = "formField">
 
@@ -42,7 +43,7 @@
                 Not read
             </label>
             <div class = "btnWrapper">
-                <button class = "btn" type="button">Add Book</button>
+                <button id = "btn" class = "btn" type="button">Add Book</button>
             </div>
             
         </form>
